Find pictures for background image.

--- a/index.html
+++ b/index.html
@@ -2,49 +2,54 @@
 <html>
   <head>
     <title>One Fall</title>
-    <link href="/Users/edward/Documents/website2/resources/style.css" type="text/css" rel="stylesheet">
+    <link href="/Users/edwardwhitby/Documents/website2/resources/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <div class="header">
+      <!-- Top Banner Header -->
       <h1>One Fall</h1>
     </div>
     <div>
+      <!-- Raw section of website -->
       <h2 class="raw">Raw Results</h2>
         <img src="" />
         <ul>
-          <li></li>
+          <li>Who should succeed Brock to be Champ?</li>
           <li></li>
           <li></li>
         </ul>
     </div>
     <div>
+      <!-- SmackDown section of Website -->
       <h2 class="smackdown">Smackdown Results</h2>
         <img src=""/>
         <ul>
-          <li></li>
+          <li>Lack of excitement from AJ Styles "dream matches".</li>
           <li></li>
           <li></li>
         </ul>
     </div>
     <div>
+      <!-- NXT section of Website -->
       <h2 class="nxt">NXT Results</h2>
         <img src=""/>
         <ul>
-          <li></li>
+          <li>Is Aleister Black destined to be a Superstar on the Main Roster?</li>
           <li></li>
           <li></li>
         </ul>
     </div>
     <div>
+      <!-- PPV Section of Website -->
       <h2 class="ppv">PPV</h2>
       <img class="" />
         <ul>
-          <li></li>
+          <li>MITB preview</li>
           <li></li>
           <li></li>
         </ul>
     </div>
 
   </body>
-  <footer></footer>
+  <footer><span></span></footer>
 </html>
